tests/files/parser_tests/should_fail/086.cmdr
//Should not parse string interpolation due to statement instead of expression
x = "${for (i = 0 ; i < 5; i++) { print(i); } }";
